# machap-chapter-editor

./: .gitignore  README.md  blackdetect_worker.py  detector.py  export_utils.py  gui.py  main.py  pyproject.toml  queue_manager.py  requirements.txt  scan_settings.py  test_video_chaptered_chapters.txt  time_windows.py  timeline.py
Test Folder/MKV/: A Pup Named Scooby-Doo - S01E01 - A Bicycle Built for Boo! SDTV_chaptered_chapters.txt  A Pup Named Scooby-Doo - S01E02 - The Sludge Monster from the Earth's Core SDTV_chaptered_chapters.txt  A Pup Named Scooby-Doo - S01E03 - Wanted Cheddar Alive SDTV_chaptered_chapters.txt  A Pup Named Scooby-Doo - S01E04 - The Schnook Who Took My Comic Book SDTV_chaptered_chapters.txt  A Pup Named Scooby-Doo - S01E05 - For Letter or Worse SDTV_chaptered_chapters.txt
machap_chapter_editor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_detector.py  test_export_utils.py  test_time_windows.py
